gateway/manifests/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
  labels:
    app: gateway
    service: video-converter
spec:
  replicas: 3
  selector:
    matchLabels:
      app: gateway
      service: video-converter
  template:
    metadata:
      labels:
        app: gateway
        service: video-converter
    spec:
      containers:
        - name: gateway
          image: gateway:latest
          imagePullPolicy: Never
