gateway/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  selector:
    app: gateway
    service: video-converter
  type: ClusterIP
  ports:
    - port: 8001
      targetPort: 8001
      protocol: TCP
